[package]
name = "urasoe"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Generate images with ControlNet by reading images from a folder and calling Stable Diffusion API"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
reqwest = { version = "0.12.0", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
base64 = "0.22.0"
anyhow = "1.0.98"
colored = "3.0.0"
image = "0.25.0"
chrono = "0.4.41"
tempfile = "3.20.0"

[dev-dependencies]
nix = { version = "0.30.1", features = ["user"] }
